<resources>
    <string name="app_name">My Fitness Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@myfitnesstracker.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_trainer">Trainer</string>
    <string name="menu_subscription">Subscription</string>
    <string name="enter_goal">Enter Goal</string>
    <string name="add_goal">Add Goal</string>
    <string name="trainer_photo_placeholder">Trainer photo placeholder</string>

    <!--Strings for subscription fragment-->
    <string name="subscription_title">Get in the best shape of your life with premium!</string>
    <string name="subscription_perk_1">Add free experience</string>
    <string name="subscription_perk_2">Special training videos</string>
    <string name="subscription_perk_3">Personal trainer instructions</string>
    <string name="subscription_subtitle">Plans</string>
    <string name="subscription_subtitle_annual">Annual</string>
    <string name="subscription_subtitle_quarterly">Quarterly</string>
    <string name="subscription_subtitle_monthly">Monthly</string>
    <string name="subscription_annual_price"><b>$6.00 USD</b> / month</string>
    <string name="subscription_quarterly_price"><b>$9.00 USD</b> / month</string>
    <string name="subscription_monthly_price"><b>$12.00 USD</b> / month</string>
    <string name="subscription_annual_savings">SAVE 50%</string>
    <string name="subscription_quarterly_savings">SAVE 25%</string>
    <string name="subscription_button">Select</string>

    <!--These are the options for the drop down goal selector in registration-->
    <string-array name="goalDropDownSelections">
        <item>Calories Burned</item>
        <item>Steps</item>
        <item>Weight goal</item>
        <item>Miles run</item>
    </string-array>
</resources>