<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_progress"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_menu_goals"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_trainer"
            android:icon="@drawable/ic_menu_trainer"
            android:title="@string/menu_trainer" />
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_menu_subscription"
            android:title="@string/menu_subscription" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>